--- a/src/component css/home.css
+++ b/src/component css/home.css
@@ -472,22 +472,58 @@
 }
 /* .................................page 5................................. */
 .page5 {
+  padding-top: 50px;
   height: auto;
-  background-color: #61645b;
-  padding-top: 80px;
+}
+
+.page5bx {
+  /* background-color: #8bc34a; */
+  height: 250px;
+  margin-top: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.pg5itmbx {
+  width: 100%;
+  height: 100%;
+  /* background-color: #ce1de7; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding-top: 10px;
+  border: 2px solid black;
+}
+
+.itemimgpag5 {
+  max-width: 100%;
+  max-height: 100px;
+  object-fit: contain;
+}
+
+.loader-container {
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
 
-.boxespg5{
-  width: 100%;
-  height: 300px;
-  background-color: #ce1de7;
-  margin: 10px;
-  float: left;
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
 }
 
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 
 
