--- a/src/component css/home.css
+++ b/src/component css/home.css
@@ -471,59 +471,84 @@
   border: none;
 }
 /* .................................page 5................................. */
-.page5 {
+.page5{
+  /* background-color: #61645b; */
   padding-top: 50px;
   height: auto;
 }
-
-.page5bx {
-  /* background-color: #8bc34a; */
-  height: 250px;
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.page5bx{
+  height: 300px;
+  /* background-color: #c372d3; */
+  float: left;
+  padding: 10px;
 }
+.page5bxproduct{
+  margin: auto;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  width: 90%;
+  height: 90%;
+  /* background-color: aqua; */
+  border-radius: 10px;
+}
+.page5h1{
+  height: 100px;
+  background-color: rgba(56, 49, 49, 0.701);
+  border-radius: 50px;
+  margin-bottom: 30px;
 
-.pg5itmbx {
-  width: 100%;
-  height: 100%;
-  /* background-color: #ce1de7; */
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+}
+.page5h1 h1{
+  color: rgb(255, 255, 255);
   text-align: center;
-  padding-top: 10px;
-  border: 2px solid black;
-}
+  padding-bottom: 10px;
+  padding-top: 20px;
+  text-shadow: 1px 1px 2px red, 0 0 1em blue, 0 0 0.2em blue;
 
-.itemimgpag5 {
-  max-width: 100%;
-  max-height: 100px;
-  object-fit: contain;
 }
-
-.loader-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+.page5bxproduct img{
+  width: 100%;
+  height: 70%;
 }
-
+.page5bxproduct h3{
+  font-weight: bold;
+  font-size: 17px; 
+  text-align: center;
+}
+.page5bxproduct h4{
+  color: black;
+  font-weight: bold;
+  font-size: 17px;
+  margin-right: 20px;
+  text-align: center;
+}
 .loader {
-  border: 16px solid #f3f3f3;
+  width: 70px;
+  aspect-ratio: 1;
+  background:
+    radial-gradient(farthest-side,#ffa516 90%,#0000) center/16px 16px,
+    radial-gradient(farthest-side,green   90%,#0000) bottom/12px 12px;
+  background-repeat: no-repeat;
+  animation: l17 1s infinite linear;
+  position: relative;
+  margin: auto;
+}
+.loader::before {    
+  content:"";
+  position: absolute;
+  width: 8px;
+  aspect-ratio: 1;
+  inset: auto 0 16px;
+  margin: auto;
+  background: #ccc;
   border-radius: 50%;
-  border-top: 16px solid #3498db;
-  width: 120px;
-  height: 120px;
-  animation: spin 2s linear infinite;
+  transform-origin: 50% calc(100% + 10px);
+  animation: inherit;
+  animation-duration: 0.5s;
+}
+@keyframes l17 { 
+  100%{transform: rotate(1turn)}
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
 
 
 
@@ -570,6 +595,7 @@
     width: 120px;
     height: 70px;
   }
+  
   
 
 }
