--- a/src/App.css
+++ b/src/App.css
@@ -36,25 +36,49 @@ code {
 }
 .navproductlist{
   padding-top: 22px;
-  width: 200px;
+  width: 350px;
   top: 50px;
-  height: 110px;
+  height: 150px;
   /* background-color: #7a00ff; */
   display: none;
   position: absolute;
   z-index: 999;
-  transition: ease-in-out;
+  transition: 0.5s ease-in-out;
   
 }
 .nav-item:hover .navproductlist {
   display: block;
-  transition: ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 .categorynavbx{
   width: 50%;
   height: 50%;
   background-color: #d2d6eb;
+  border: 1px solid rgba(40, 33, 33, 0.664);
   float: left;
+  border-radius: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none !important;
+}
+.categorynavbx img{
+  width: 30px;
+  height: 30px;
+  float: left;
+  text-decoration: none !important;
+}
+.categorynavbx h6{
+  text-shadow: none !important;
+  font-size: 14px;
+  color: hsl(188, 13%, 35%);
+  font-weight: bold;
+  cursor: pointer;
+  text-decoration: none !important;
+
+
+
+
 }
 
 
